--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -11,7 +11,7 @@
     <meta name="Copyright" content="Oleksii Anoshkin" />
     <meta name="Address" content="Ukraine, Kharkiv" />
     <!-- general -->
-    <meta name="description" content="practice with wireframe" />
+    <meta name="description" content="Practice with wireframe" />
     <meta name="keywords" content="Wireframes, BEM, SCSS, SASS" />
     <meta name="robots" content="all" />
     <!-- facebook -->
@@ -58,25 +58,25 @@
         <!-- page links -->
         <ul class="nav__items links">
           <li class="nav__item">
-            <a class="link__header link" href="#">Features</a>
+            <a class="link-header link" href="#">Features</a>
           </li>
           <li class="nav__item">
-            <a class="link__header link" href="#">Pricing</a>
+            <a class="link-header link" href="#">Pricing</a>
           </li>
           <li class="nav__item">
-            <a class="link__header link" href="#">Community</a>
+            <a class="link-header link" href="#">Community</a>
           </li>
           <li class="nav__item">
-            <a class="link__header link" href="#">Support</a>
+            <a class="link-header link" href="#">Support</a>
           </li>
         </ul>
         <!-- buttons -->
         <ul class="nav__items btns">
           <li class="nav__item">
-            <a class="btn__header btn" href="#">Log in</a>
+            <a class="btn-header btn" href="#">Log in</a>
           </li>
           <li class="nav__item">
-            <a class="btn__header btn" href="#">Register</a>
+            <a class="btn-header btn" href="#">Register</a>
           </li>
         </ul>
       </nav>
@@ -280,9 +280,9 @@
         <!-- nav links -->
         <div class="nav__other">
           <ul class="nav__items">
-            <li><a class="link__footer" href="#">Mobile app</a></li>
-            <li><a class="link__footer" href="#">Community</a></li>
-            <li><a class="link__footer" href="#">Company</a></li>
+            <li><a class="link-footer" href="#">Mobile app</a></li>
+            <li><a class="link-footer" href="#">Community</a></li>
+            <li><a class="link-footer" href="#">Company</a></li>
           </ul>
           <div class="footer__logo logo">
             <svg
@@ -306,16 +306,16 @@
             <a class="logo__text" href="./index.html">photo</a>
           </div>
           <ul class="nav__items">
-            <li><a class="link__footer" href="#">Help desk</a></li>
-            <li><a class="link__footer" href="#">Blog</a></li>
-            <li><a class="link__footer" href="#">Resources</a></li>
+            <li><a class="link-footer" href="#">Help desk</a></li>
+            <li><a class="link-footer" href="#">Blog</a></li>
+            <li><a class="link-footer" href="#">Resources</a></li>
           </ul>
         </div>
         <!-- social links -->
         <div class="nav__social">
           <ul class="nav__items">
             <li class="nav__item link">
-              <a class="link__footer" href="#">
+              <a class="link-footer" href="#">
                 <img
                   class="link__img"
                   src="./image/footer/social-img.svg"
@@ -325,7 +325,7 @@
               </a>
             </li>
             <li class="nav__item link">
-              <a class="link__footer" href="#">
+              <a class="link-footer" href="#">
                 <img
                   class="link__img"
                   src="./image/footer/social-img.svg"
@@ -335,7 +335,7 @@
               </a>
             </li>
             <li class="nav__item link">
-              <a class="link__footer" href="#">
+              <a class="link-footer" href="#">
                 <img
                   class="link__img"
                   src="./image/footer/social-img.svg"
@@ -345,7 +345,7 @@
               </a>
             </li>
             <li class="nav__item link">
-              <a class="link__footer" href="#">
+              <a class="link-footer" href="#">
                 <img
                   class="link__img"
                   src="./image/footer/social-img.svg"
