--- a/sass_bem_wireframe_practice/pages/hero.html
+++ b/sass_bem_wireframe_practice/pages/hero.html
@@ -22,18 +22,20 @@
     <meta property="og:url" content="#" />
     <meta property="og:site_name" content="Practice with wireframe - Hero" />
     <!-- styles -->
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./styles.css" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
-      rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- images -->
     <link rel="shortcut icon" type="image/x-icon" href="./image/favicon.jpg" />
     <!-- title -->
     <title>Practice with wireframe - Hero</title>
   </head>
-  <body class="wrapper"></body>
+  <body class="wrapper">
+    <main class="content">
+      <!-- hero -->
+      <section class="content__hero hero">
+        <h1 class="hero__title">The largest community of photo enthusiasts</h1>
+        <a class="hero__btn btn" href="#">Join Today</a>
+      </section>
+      <div class="line__hero"></div>
+    </main>
+  </body>
 </html>
