--- a/sass_bem_wireframe_practice/pages/navigation.html
+++ b/sass_bem_wireframe_practice/pages/navigation.html
@@ -24,18 +24,226 @@
       property="og:site_name"
       content="Practice with wireframe - Navigation" />
     <!-- styles -->
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./styles.css" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
-      rel="stylesheet" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- images -->
     <link rel="shortcut icon" type="image/x-icon" href="./image/favicon.jpg" />
     <!-- title -->
     <title>Practice with wireframe - Navigation</title>
   </head>
-  <body class="wrapper"></body>
+  <body class="wrapper">
+    <!-- header first -->
+    <header class="header first">
+      <!-- logo -->
+      <div class="header__logo logo">
+        <svg
+          class="logo__icon"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
+            fill="#CCCCCC" />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
+            fill="black" />
+        </svg>
+        <a class="logo__text" href="./index.html">photo</a>
+      </div>
+      <!-- navbar -->
+      <nav class="header__nav nav">
+        <!-- page links -->
+        <ul class="nav__items links">
+          <li class="nav__item">
+            <a class="link-header link" href="#">Features</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Community</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Support</a>
+          </li>
+        </ul>
+        <!-- buttons -->
+        <ul class="nav__items btns">
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Log in</a>
+          </li>
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Register</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- line -->
+    <div class="line__header"></div>
+    <!-- header second -->
+    <header class="header second">
+      <!-- logo -->
+      <div class="header__logo logo">
+        <svg
+          class="logo__icon"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
+            fill="#CCCCCC" />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
+            fill="black" />
+        </svg>
+        <a class="logo__text" href="./index.html">photo</a>
+      </div>
+      <!-- navbar -->
+      <nav class="header__nav nav">
+        <!-- page links -->
+        <ul class="nav__items links">
+          <li class="nav__item">
+            <a class="link-header link" href="#">Features</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Community</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Support</a>
+          </li>
+        </ul>
+        <!-- buttons -->
+        <ul class="nav__items btns">
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Log in</a>
+          </li>
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Register</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- line -->
+    <div class="line__header"></div>
+    <!-- header third -->
+    <header class="header">
+      <!-- logo -->
+      <div class="header__logo logo">
+        <svg
+          class="logo__icon"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
+            fill="#CCCCCC" />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
+            fill="black" />
+        </svg>
+        <a class="logo__text" href="./index.html">photo</a>
+      </div>
+      <!-- navbar -->
+      <nav class="header__nav nav">
+        <!-- page links -->
+        <ul class="nav__items links">
+          <li class="nav__item">
+            <a class="link-header link" href="#">Features</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Community</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Support</a>
+          </li>
+        </ul>
+        <!-- buttons -->
+        <ul class="nav__items btns">
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Log in</a>
+          </li>
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Register</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- line -->
+    <div class="line__header"></div>
+    <!-- header fourth -->
+    <header class="header fourth">
+      <!-- logo -->
+      <div class="header__logo logo">
+        <svg
+          class="logo__icon"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
+            fill="#CCCCCC" />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
+            fill="black" />
+        </svg>
+        <a class="logo__text" href="./index.html">photo</a>
+      </div>
+      <!-- navbar -->
+      <nav class="header__nav nav">
+        <!-- page links -->
+        <ul class="nav__items links">
+          <li class="nav__item">
+            <a class="link-header link" href="#">Features</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Community</a>
+          </li>
+          <li class="nav__item">
+            <a class="link-header link" href="#">Support</a>
+          </li>
+        </ul>
+        <!-- buttons -->
+        <ul class="nav__items btns">
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Log in</a>
+          </li>
+          <li class="nav__item">
+            <a class="btn-header btn" href="#">Register</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
