Робота над проектом.
Що зроблено:
- закінчені зміни в файловій структурі;
- перенесені класи по розділам;
- завершені виправлення в розділах header and hero;
- виділені та рознесені основні міксини, структурні елементи, шрифти, кольори.

--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -56,27 +56,27 @@
       <!-- navbar -->
       <nav class="header__nav nav">
         <!-- page links -->
-        <ul class="nav__items links">
+        <ul class="nav__items">
           <li class="nav__item">
-            <a class="link-header link" href="#">Features</a>
+            <a class="link" href="#">Features</a>
           </li>
           <li class="nav__item">
-            <a class="link-header link" href="#">Pricing</a>
+            <a class="link" href="#">Pricing</a>
           </li>
           <li class="nav__item">
-            <a class="link-header link" href="#">Community</a>
+            <a class="link" href="#">Community</a>
           </li>
           <li class="nav__item">
-            <a class="link-header link" href="#">Support</a>
+            <a class="link" href="#">Support</a>
           </li>
         </ul>
         <!-- buttons -->
-        <ul class="nav__items btns">
+        <ul class="nav__items">
           <li class="nav__item">
-            <a class="btn-header btn" href="#">Log in</a>
+            <a class="btn" href="#">Log in</a>
           </li>
           <li class="nav__item">
-            <a class="btn-header btn" href="#">Register</a>
+            <a class="btn" href="#">Register</a>
           </li>
         </ul>
       </nav>
@@ -171,18 +171,6 @@
             </li>
           </ul>
         </div>
-      </section>
-      <!-- sub-page -->
-      <section class="content__sub-page sub-page">
-        <h2 class="sub-page__header">
-          The largest community of photo enthusiasts
-        </h2>
-        <img
-          class="sub-page__img"
-          src="./image/sub-page/sub-page-img.svg"
-          alt="rectangle"
-          width="750"
-          height="440" />
       </section>
       <!-- testimonials -->
       <section class="content__testimonials testimonials">
