--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -101,7 +101,7 @@
                 aut fugit, sed quia consequuntur magni dolores eos qui ratione
                 voluptatem sequi nesciunt. Neque porro quisquam est.
               </p>
-              <a class="item__link" href="#">Learn more</a>
+              <a class="btn" href="#">Learn more</a>
             </li>
             <li class="top__item item">
               <h3 class="item__title">Lorem ipsum dolor</h3>
@@ -110,7 +110,7 @@
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                 veniam, quis nostrud exercitation ullamco laboris nisi.
               </p>
-              <a class="item__link" href="#">Learn more</a>
+              <a class="btn" href="#">Learn more</a>
             </li>
             <li class="top__item item">
               <h3 class="item__title">Nemo enim ipsam</h3>
@@ -119,7 +119,7 @@
                 nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
                 sit amet, consectetur, adipisci velit, sed quia non numquam.
               </p>
-              <a class="item__link" href="#">Learn more</a>
+              <a class="btn" href="#">Learn more</a>
             </li>
             <li class="top__item item">
               <h3 class="item__title">Tempor incididunt</h3>
@@ -128,7 +128,7 @@
                 est, qui dolorem ipsum quia dolor sit amet, consectetur,
                 adipisci velit, sed quia non numquam eius modi tempora.
               </p>
-              <a class="item__link" href="#">Learn more</a>
+              <a class="btn" href="#">Learn more</a>
             </li>
           </ul>
         </div>
@@ -138,7 +138,7 @@
             <li class="bot__item item">
               <img
                 class="item__img"
-                src="./image/body/body-img.svg"
+                src="/image/body/body-half-mini.svg"
                 alt="rectangle"
                 width="750"
                 height="440" />
@@ -155,7 +155,7 @@
             <li class="bot__item item">
               <img
                 class="item__img"
-                src="./image/body/body-img.svg"
+                src="/image/body/body-half-mini.svg"
                 alt="rectangle"
                 width="750"
                 height="440" />
