--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -183,7 +183,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -191,7 +191,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -199,7 +199,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -207,7 +207,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -215,7 +215,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -223,7 +223,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -231,7 +231,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -239,7 +239,7 @@
           <li class="testimonials__item item">
             <img
               class="item__img"
-              src="./image/testimonials/testimonials-img.svg"
+              src="/image/testimonials/testimonials-item.svg"
               alt="rectangle"
               width="172"
               height="76" />
@@ -253,11 +253,11 @@
           eiusmod tempor incididunt ut labore
         </h2>
         <ul class="signup__items">
-          <li class="signup__item btn">
-            <a class="btn__signup" href="#">Join Today</a>
+          <li class="signup__item">
+            <a class="btn" href="#">Join Today</a>
           </li>
-          <li class="signup__item btn">
-            <a class="btn__signup" href="#">Contact us</a>
+          <li class="signup__item">
+            <a class="btn" href="#">Contact us</a>
           </li>
         </ul>
       </section>
