Завершений головний макет.
Закінчена стилізація футеру.

--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -268,9 +268,9 @@
         <!-- nav links -->
         <div class="nav__other">
           <ul class="nav__items">
-            <li><a class="link-footer" href="#">Mobile app</a></li>
-            <li><a class="link-footer" href="#">Community</a></li>
-            <li><a class="link-footer" href="#">Company</a></li>
+            <li><a class="link" href="#">Mobile app</a></li>
+            <li><a class="link" href="#">Community</a></li>
+            <li><a class="link" href="#">Company</a></li>
           </ul>
           <div class="footer__logo logo">
             <svg
@@ -294,49 +294,45 @@
             <a class="logo__text" href="./index.html">photo</a>
           </div>
           <ul class="nav__items">
-            <li><a class="link-footer" href="#">Help desk</a></li>
-            <li><a class="link-footer" href="#">Blog</a></li>
-            <li><a class="link-footer" href="#">Resources</a></li>
+            <li><a class="link" href="#">Help desk</a></li>
+            <li><a class="link" href="#">Blog</a></li>
+            <li><a class="link" href="#">Resources</a></li>
           </ul>
         </div>
         <!-- social links -->
         <div class="nav__social">
           <ul class="nav__items">
-            <li class="nav__item link">
-              <a class="link-footer" href="#">
+            <li class="nav__item">
+              <a class="link" href="#">
                 <img
-                  class="link__img"
-                  src="./image/footer/social-img.svg"
+                  src="/image/footer/footer-ellipse.svg"
                   alt="ellipse"
                   width="44"
                   height="44" />
               </a>
             </li>
-            <li class="nav__item link">
-              <a class="link-footer" href="#">
+            <li class="nav__item">
+              <a class="link" href="#">
                 <img
-                  class="link__img"
-                  src="./image/footer/social-img.svg"
+                  src="/image/footer/footer-ellipse.svg"
                   alt="ellipse"
                   width="44"
                   height="44" />
               </a>
             </li>
-            <li class="nav__item link">
-              <a class="link-footer" href="#">
+            <li class="nav__item">
+              <a class="link" href="#">
                 <img
-                  class="link__img"
-                  src="./image/footer/social-img.svg"
+                  src="/image/footer/footer-ellipse.svg"
                   alt="ellipse"
                   width="44"
                   height="44" />
               </a>
             </li>
-            <li class="nav__item link">
-              <a class="link-footer" href="#">
+            <li class="nav__item">
+              <a class="link" href="#">
                 <img
-                  class="link__img"
-                  src="./image/footer/social-img.svg"
+                  src="/image/footer/footer-ellipse.svg"
                   alt="ellipse"
                   width="44"
                   height="44" />
