Робота з розділами Header.
Закінчив стилізацію різних варіантів компоновки Header.

--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -18,8 +18,12 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="site" />
     <meta property="og:title" content="Practice with wireframe" />
-    <meta property="og:image" content="#" />
-    <meta property="og:url" content="#" />
+    <meta
+      property="og:image"
+      content="https://practice-with-wireframe.netlify.app/image/body/body-half-mini.svg" />
+    <meta
+      property="og:url"
+      content="https://practice-with-wireframe.netlify.app/" />
     <meta property="og:site_name" content="Practice with wireframe" />
     <!-- styles -->
     <link rel="stylesheet" href="./css/style.css" />
