--- a/sass_bem_wireframe_practice/pages/headers.html
+++ b/sass_bem_wireframe_practice/pages/headers.html
@@ -18,8 +18,12 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="site" />
     <meta property="og:title" content="Practice with wireframe - Headers" />
-    <meta property="og:image" content="#" />
-    <meta property="og:url" content="#" />
+    <meta
+      property="og:image"
+      content="https://practice-with-wireframe.netlify.app/image/body/body-half-mini.svg" />
+    <meta
+      property="og:url"
+      content="https://practice-with-wireframe.netlify.app/" />
     <meta property="og:site_name" content="Practice with wireframe - Headers" />
     <!-- styles -->
     <link rel="stylesheet" href="../css/style.css" />
@@ -84,7 +88,7 @@
     <!-- --------------------------------------- -->
     <div class="air"></div>
     <!-- header nav rigth -->
-    <header class="header">
+    <header class="header second">
       <!-- logo -->
       <div class="header__logo logo">
         <svg
@@ -192,7 +196,7 @@
     <!-- --------------------------------------- -->
     <div class="air"></div>
     <!-- header without btns -->
-    <header class="header">
+    <header class="header third">
       <!-- logo -->
       <div class="header__logo logo">
         <svg
