Закінчена розмітка заголовків.

--- a/sass_bem_wireframe_practice/pages/hero.html
+++ b/sass_bem_wireframe_practice/pages/hero.html
@@ -46,6 +46,37 @@
       </section>
       <!-- --------------------------------------- -->
       <div class="air"></div>
+      <!-- hero content right -->
+      <section class="content__hero hero2">
+        <div class="hero1__box">
+          <h1 class="hero__title">
+            The largest community of photo enthusiasts
+          </h1>
+          <a class="hero__btn btn" href="#">Join Today</a>
+        </div>
+        <div class="hero1__bg"></div>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- hero content top -->
+      <section class="content__hero hero3">
+        <div class="hero1__box">
+          <h1 class="hero__title">
+            The largest community of photo enthusiasts
+          </h1>
+          <a class="hero__btn btn" href="#">Join Today</a>
+        </div>
+        <div class="hero1__bg"></div>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- hero content center/left-->
+      <section class="content__hero hero4">
+        <h1 class="hero__title">The largest community of photo enthusiasts</h1>
+        <a class="hero__btn btn" href="#">Join Today</a>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
       <!-- hero -->
       <section class="content__hero hero">
         <h1 class="hero__title">The largest community of photo enthusiasts</h1>
@@ -53,6 +84,48 @@
       </section>
       <!-- --------------------------------------- -->
       <div class="air"></div>
+      <!-- hero content center/left with video -->
+      <section class="content__hero hero5">
+        <h1 class="hero__title">The largest community of photo enthusiasts</h1>
+        <a class="hero__btn btn" href="#">Join Today</a>
+        <img
+          src="../image/hero/hero-small-video.svg"
+          alt="rectangle"
+          width="296"
+          height="212" />
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- hero with form -->
+      <section class="content__hero hero-form">
+        <div class="hero__text">
+          <h1 class="hero__title">
+            The largest community of photo enthusiasts
+          </h1>
+        </div>
+        <div class="hero__container">
+          <form class="form" action="#">
+            <h3 class="form__title">Sign up for a free account</h3>
+            <input
+              class="form__first-name link"
+              type="text"
+              placeholder="First name" />
+            <input
+              class="form__last-name link"
+              type="text"
+              placeholder="Last name" />
+            <input
+              class="form__email link"
+              type="email"
+              placeholder="Email address" />
+            <input
+              class="form__password link"
+              type="password"
+              placeholder="Create password" />
+            <button class="hero__btn btn" type="submit">Register</button>
+          </form>
+        </div>
+      </section>
     </main>
   </body>
 </html>
