Закінчена стилізація розділу testimonials

--- a/sass_bem_wireframe_practice/pages/testimonials.html
+++ b/sass_bem_wireframe_practice/pages/testimonials.html
@@ -100,8 +100,8 @@
       <div class="air"></div>
       <!-- --------------------------------------- -->
       <!-- testimonials with-card -->
-      <section class="content__testimonials testimonials">
-        <div>
+      <section class="content__testimonials testimonials with-card">
+        <div class="content__box">
           <h2 class="testimonials__title">You&#39;re in good company</h2>
           <p class="testimonials__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -158,11 +158,11 @@
             </li>
           </ul>
         </div>
-        <div>
-          <img src="" alt="rectangle" />
-          <div>
-            <h3>Sed ut perspiciatis unde omnis</h3>
-            <p>
+        <div class="card__box">
+          <div class="card-bg"></div>
+          <div class="text-box">
+            <h3 class="text-box__title">Sed ut perspiciatis unde omnis</h3>
+            <p class="text-box__text">
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
@@ -285,13 +285,7 @@
             height="44" />
           <p class="testimonials__bottom">Nemo enim ipsam</p>
         </div>
-        <div class="testimonials__bg">
-          <img
-            src="/image/testimonials/testimonials-quarter.svg"
-            alt="rectangle"
-            width="508"
-            height="468" />
-        </div>
+        <div class="testimonials__bg"></div>
       </section>
     </main>
   </body>
