Завершив практику з макетом.

--- a/sass_bem_wireframe_practice/pages/body.html
+++ b/sass_bem_wireframe_practice/pages/body.html
@@ -126,6 +126,227 @@
       <!-- --------------------------------------- -->
       <div class="air"></div>
       <!-- --------------------------------------- -->
+      <!-- body with circle-img-three -->
+      <section class="content__body body without-btn circle-img-three">
+        <!-- title -->
+        <h2 class="body__header">Snap photos and share like never before</h2>
+        <!-- items -->
+        <div class="body__top top">
+          <ul class="top__items">
+            <li class="top__item item">
+              <img
+                class="item__img"
+                src="../image/body/body-ellipse.svg"
+                alt="circle"
+                width="200"
+                height="200" />
+              <h3 class="item__title">Sed ut perspiciatis</h3>
+              <p class="item__text">
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem.
+              </p>
+              <a class="btn" href="#">Learn more</a>
+            </li>
+            <li class="top__item item">
+              <img
+                class="item__img"
+                src="../image/body/body-ellipse.svg"
+                alt="circle"
+                width="200"
+                height="200" />
+              <h3 class="item__title">Lorem ipsum dolor</h3>
+              <p class="item__text">
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis.
+              </p>
+              <a class="btn" href="#">Learn more</a>
+            </li>
+            <li class="top__item item">
+              <img
+                class="item__img"
+                src="../image/body/body-ellipse.svg"
+                alt="circle"
+                width="200"
+                height="200" />
+              <h3 class="item__title">Nemo enim ipsam</h3>
+              <p class="item__text">
+                Consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+                dolor.
+              </p>
+              <a class="btn" href="#">Learn more</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- --------------------------------------- -->
+      <!-- body half -->
+      <section class="content__body half">
+        <!-- title -->
+        <div class="half__img"></div>
+        <!-- items -->
+        <div class="half__content">
+          <h2 class="half__header">Sed ut perspiciatis unde omnis</h2>
+          <p class="half__text first">
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+            fugit, sed quia consequuntur magni dolores eos qui ratione
+            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+          </p>
+          <p class="half__text second">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+            quae ab illo inventore.
+          </p>
+        </div>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- --------------------------------------- -->
+      <!-- body half with-circle -->
+      <section class="content__body half half-circle">
+        <!-- title -->
+        <div class="half__img"></div>
+        <!-- items -->
+        <div class="half__content">
+          <h2 class="half__header">Sed ut perspiciatis unde omnis</h2>
+          <p class="half__text first">
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+            fugit, sed quia consequuntur magni dolores eos qui ratione
+            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+          </p>
+          <ul class="half__items">
+            <li class="half__item">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptate
+            </li>
+            <li class="half__item">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptate
+            </li>
+            <li class="half__item">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptate
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- --------------------------------------- -->
+      <!-- body half-mini -->
+      <section class="content__body half-mini">
+        <h2 class="half__header">Snap photos and share like never before</h2>
+        <p class="half__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore
+        </p>
+        <div class="half__content">
+          <ul class="half__items">
+            <li class="half__item">
+              <h3 class="half__item-title">Sed ut perspiciatis</h3>
+              <p class="half__item-text">
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur.
+              </p>
+            </li>
+            <li class="half__item">
+              <h3 class="half__item-title">Lorem ipsum dolor</h3>
+              <p class="half__item-text">
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua.
+              </p>
+            </li>
+            <li class="half__item">
+              <h3 class="half__item-title">Nemo enim ipsam</h3>
+              <p class="half__item-text">
+                Consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt. Neque porro quisquam est, qui dolorem.
+              </p>
+            </li>
+          </ul>
+          <div class="half__img"></div>
+        </div>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- --------------------------------------- -->
+      <!-- body with two card -->
+      <section class="content__body two-card">
+        <h2 class="half__header">Snap photos and share like never before</h2>
+        <p class="half__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore
+        </p>
+        <ul class="half__items">
+          <li class="half__item">
+            <div class="half__img"></div>
+            <div class="half__box">
+              <h3 class="half__item-title">Nemo enim ipsam</h3>
+              <p class="half__item-text">
+                Consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt. Neque porro quisquam est, qui dolorem.
+              </p>
+            </div>
+          </li>
+          <li class="half__item">
+            <div class="half__img"></div>
+            <div class="half__box">
+              <h3 class="half__item-title">Lorem ipsum dolor</h3>
+              <p class="half__item-text">
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- --------------------------------------- -->
+      <!-- body with three card -->
+      <section class="content__body two-card three-card">
+        <h2 class="half__header">Snap photos and share like never before</h2>
+        <p class="half__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore
+        </p>
+        <ul class="half__items">
+          <li class="half__item">
+            <div class="half__img"></div>
+            <div class="half__box">
+              <h3 class="half__item-title">Sed ut perspiciatis</h3>
+              <p class="half__item-text">
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia.
+              </p>
+            </div>
+          </li>
+          <li class="half__item">
+            <div class="half__img"></div>
+            <div class="half__box">
+              <h3 class="half__item-title">Lorem ipsum dolor</h3>
+              <p class="half__item-text">
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua.
+              </p>
+            </div>
+          </li>
+          <li class="half__item">
+            <div class="half__img"></div>
+            <div class="half__box">
+              <h3 class="half__item-title">Nemo enim ipsam</h3>
+              <p class="half__item-text">
+                Consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <!-- --------------------------------------- -->
+      <div class="air"></div>
+      <!-- --------------------------------------- -->
       <!-- body -->
       <section class="content__body body">
         <!-- title -->
