--- a/task_js_dom/side-menu/index.html
+++ b/task_js_dom/side-menu/index.html
@@ -30,29 +30,85 @@
   </head>
   <body class="wrap">
     <aside class="sidebar">
-      <header class="sidebar__header header">
-        <div class="header__logo logo">
-          <a class="logo__text" href="https://kottans.org/"
-            ><span class="text">Kottans</span></a
-          >
-        </div>
-        <div class="header__arrow"></div>
+      <header class="sidebar__header">
+        <div class="sidebar__arrow" tabindex="1"></div>
       </header>
-      <ul class="sidebar__menu menu">
-        <li class="menu__item"><span class="text">Ferrari</span></li>
-        <li class="menu__item"><span class="text">Lamborghini</span></li>
-        <li class="menu__item"><span class="text">Bugatti</span></li>
-        <li class="menu__item"><span class="text">Porsche</span></li>
-        <li class="menu__item"><span class="text">Aston martin</span></li>
-        <li class="menu__item"><span class="text">Bentley</span></li>
+      <ul class="sidebar__menu">
+        <li class="sidebar__item" tabindex="2">
+          <img
+            class="sidebar__img"
+            src="./images/ferrari.webp"
+            alt="ferrari logo"
+            width="28"
+            height="28" />
+          <span class="sidebar__text">Ferrari</span>
+        </li>
+        <li class="sidebar__item" tabindex="3">
+          <img
+            class="sidebar__img"
+            src="./images/lamborghini.webp"
+            alt="lamborghini logo"
+            width="28"
+            height="28" />
+          <span class="sidebar__text">Lamborghini</span>
+        </li>
+        <li class="sidebar__item" tabindex="4">
+          <img
+            class="sidebar__img"
+            src="./images/mercedes.webp"
+            alt="mercedes logo"
+            width="28"
+            height="28" />
+          <span class="sidebar__text">Mercedes</span>
+        </li>
+        <li class="sidebar__item" tabindex="5">
+          <img
+            class="sidebar__img"
+            src="./images/porsche.webp"
+            alt="porsche logo"
+            width="28"
+            height="28" />
+          <span class="sidebar__text">Porsche</span>
+        </li>
+        <li class="sidebar__item" tabindex="6">
+          <img
+            class="sidebar__img"
+            src="./images/dodge.webp"
+            alt="dodge logo"
+            width="28"
+            height="28" />
+          <span class="sidebar__text">Dodge</span>
+        </li>
+        <li class="sidebar__item" tabindex="7">
+          <img
+            class="sidebar__img"
+            src="./images/lotus.webp"
+            alt="lotus logo"
+            width="28"
+            height="28" />
+          <span class="sidebar__text">Lotus</span>
+        </li>
       </ul>
-      <footer class="sidebar__footer footer">
-        <p class="footer__text">
-          <span class="text">&#169; Oleksii Anoshkin, </span>2023
-        </p>
+      <footer class="sidebar__footer">
+        <a
+          class="sidebar__link"
+          tabindex="8"
+          href="https://kottans.org/"
+          target="_blank"
+          rel="noopener noreferrer nofollow">
+          <img
+            class="sidebar__img"
+            src="./images/kottans-logo.png"
+            alt="kottans logo"
+            width="32"
+            height="32" />
+          <span class="sidebar__text">Kottans</span>
+        </a>
       </footer>
     </aside>
-    <main class="content"></main>
+    <main>
+      <section class="content"></section>
+    </main>
     <!-- scripts -->
     <script src="./script.js"></script>
   </body>
